--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@supabase/supabase-js": "^1.35.3",
+    "@supabase/ui": "^0.36.5",
+    "@tailwindcss/forms": "^0.5.2",
+    "daisyui": "^2.15.4",
+    "heroicons": "^1.0.6",
+    "next": "^12.1.6",
+    "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3"
   }
 }
